# feldera

./: Cargo.toml  openapi.json
.github/actions/download-artifact-retry/: action.yml
.github/workflows/: ci-pre-mergequeue.yml  docs-linkcheck.yml  test-adapters.yml  test-unit.yml  test-web-console-unit.yml
crates/adapterlib/: Cargo.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: adhoc.rs  controller.rs  integrated.rs  panic.rs  server.rs  transport.rs  util.rs
crates/datagen/src/: lib.rs
crates/dbsp/src/: circuit.rs  trace.rs  tutorial.rs
crates/fda/src/: cli.rs  main.rs
crates/feldera-types/src/: config.rs  pipeline_diff.rs  runtime_status.rs  transport.rs
crates/pipeline-manager/src/: auth.rs  compiler.rs  config.rs
crates/rest-api/: build.rs
crates/samply/src/: lib.rs
crates/snowflake/: Cargo.toml
crates/snowflake/src/: arrow.rs  auth.rs  client.rs  input.rs  lib.rs  query.rs
crates/sqllib/src/: casts.rs  flat_variant.rs  geopoint.rs  lib.rs
docs.feldera.com/docs/: changelog.md
docs.feldera.com/docs/pipelines/: checkpoint-sync.md  modifying.md
docs.feldera.com/docs/sql/: ad-hoc.md  aggregates.md  function-index.md  grammar.md  (+1 more)
js-packages/profiler-layout/: package.json  vitest.config.ts
js-packages/web-console/: vite.config.ts
python/: pyproject.toml
python/dbt-feldera/: pyproject.toml
python/feldera/: pipeline.py
python/felderize/: pyproject.toml
python/tests/: utils.py
scripts/: test_custom_runtime_transport.sh
sql-to-dbsp-compiler/: calcite_version.env
sql-to-dbsp-compiler/SQL-compiler/: pom.xml
(+141 files in other folders)
